some render fix